@@ -3,14 +3,16 @@ package Servicios.Sockets.SocketsCifrados;
 import java.io.InputStream;
 import java.net.ServerSocket;
 import java.net.Socket;
+
 import java.util.Base64;
 
 import javax.crypto.Cipher;
 import javax.crypto.SecretKey;
 import javax.crypto.spec.SecretKeySpec;
 
-public class SP19203AU05E05Servidor_Damia_febrer {
+import sun.misc.BASE64Decoder;
 
+public class SP19203AU05E05Servidor_Damia_febrerTEST {
     public static String cleanString(String dirty){
         String clean = "";
 
@@ -23,8 +25,19 @@ public class SP19203AU05E05Servidor_Damia_febrer {
         return clean;
     }
 
-    public static byte[] removeBase64(String encoded){
-        return Base64.getDecoder().decode(encoded);
+    public static String decodeMessage(String encoded){
+        String decodificado = "";
+
+        try{
+            BASE64Decoder decoder = new BASE64Decoder();
+            byte[] decoded = decoder.decodeBuffer(encoded);
+            decodificado = new String(decoded);
+        }
+        catch(Exception e){
+            e.printStackTrace();
+        }
+
+        return decodificado;
     }
 
     public static byte[] descifrarMensaje(byte[] encriptado, SecretKey key) throws Exception{
@@ -34,40 +47,37 @@ public class SP19203AU05E05Servidor_Damia_febrer {
         return decripted;
     }
     public static void main(String[] args) {
-        
         try{
             ServerSocket servidor = new ServerSocket(44014);
             Socket nuevo = servidor.accept();
 
             InputStream is = nuevo.getInputStream();
 
-            //Reicibimos la llave
-            byte[] clave = new byte[32];            
-            is.read(clave); 
+            //Recibimos la llave
+            byte[] clave = new byte[32];
+            is.read(clave);
 
-            //Quitamos el Base64 a la llave que nos mandan del cliente
-            byte[] decoded = removeBase64(new String(clave));
+            //Quitamos el Base64 a la llave recibida
+            byte[] decoded = Base64.getDecoder().decode(clave);
 
-            //Reconstruimos la llave que nos pasa el cliente
+            //Reconstruimos la llave mediante el texto decodificado
             SecretKey sk = new SecretKeySpec(decoded, "AES");
 
-            //Recbimos el mensaje del cliente
+            //Recibimos el mensaje del cliente
             byte[] delCliente = new byte[200];
-            is.read(delCliente);    
-            
+            is.read(delCliente);
             String mensaje = new String(delCliente);
             mensaje = cleanString(mensaje);
 
-            //Quitamos el Base64 del mensaje que nos pasa el cliente
-            byte[] sinBase = removeBase64(mensaje);
+            //Quitamos el Basa64 del mensaje que nos envia el cliente
+            byte[] sinBase = Base64.getDecoder().decode(mensaje);
 
-            System.out.println("Encripted Message " + new String(sinBase));
+            System.out.println("Ciphered Message " + new String(sinBase));
 
-            //Desciframos el mensaje
-            byte[] descifrado = descifrarMensaje(sinBase, sk);
-            mensaje = new String(descifrado);
+            byte[] decripted = descifrarMensaje(sinBase, sk);
+            String descifrado = new String(decripted);
 
-            System.out.print("Decripted Message: " + new String(descifrado));
+            System.out.println("Decripted Message " + descifrado);
 
             nuevo.close();
             servidor.close();
